; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_server.c_close_socket.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_server.c_close_socket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INVALID_SOCKET = common dso_local global i64 0, align 8
@SHUT_RDWR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"Could not close socket\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64*)* @close_socket to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @close_socket(i64* %0) #0 {
  %2 = alloca i64*, align 8
  store i64* %0, i64** %2, align 8
  %3 = load i64*, i64** %2, align 8
  %4 = load i64, i64* %3, align 8
  %5 = load i64, i64* @INVALID_SOCKET, align 8
  %6 = icmp ne i64 %4, %5
  %7 = zext i1 %6 to i32
  %8 = call i32 @SDL_assert(i32 %7)
  %9 = load i64*, i64** %2, align 8
  %10 = load i64, i64* %9, align 8
  %11 = load i32, i32* @SHUT_RDWR, align 4
  %12 = call i32 @net_shutdown(i64 %10, i32 %11)
  %13 = load i64*, i64** %2, align 8
  %14 = load i64, i64* %13, align 8
  %15 = call i32 @net_close(i64 %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %19, label %17

17:                                               ; preds = %1
  %18 = call i32 @LOGW(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  br label %22

19:                                               ; preds = %1
  %20 = load i64, i64* @INVALID_SOCKET, align 8
  %21 = load i64*, i64** %2, align 8
  store i64 %20, i64* %21, align 8
  br label %22

22:                                               ; preds = %19, %17
  ret void
}

declare dso_local i32 @SDL_assert(i32) #1

declare dso_local i32 @net_shutdown(i64, i32) #1

declare dso_local i32 @net_close(i64) #1

declare dso_local i32 @LOGW(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
